--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -39,7 +39,7 @@
                 <button type="submit" class="btn btn-warning btn-lg">Signup</button>
             </form>
 
-            <p>Already have an Account? <a href="/login"></a></p>
+            <p>Already have an Account? <a href="/login">Login</a></p>
             <p>Or go <a href="/">home</a>.</p>
     </div>
 </body>
